--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -17,9 +17,16 @@
 <body>
  <div class="container">
     <h2>User Confirmation</h2>
+
+     <hr>
+
     <p>Please Read Your Information Below and if it Correct, Conform it</p>
-   
-    <table style="width:100%">
+
+
+<form method="POST" action="/registeruser" >
+
+
+    <table style="width:100%" border="1px" cellspacing="2px">
 
 
 
@@ -28,6 +35,7 @@
 
  
 </ul>
+
 
 
 
@@ -43,10 +51,7 @@
             <th class="head">BirthDay</th>
             <td>{{ dataa.birthdate }}</td>
         </tr>
-        <tr>
-            <th class="head">UserName</th>
-            <td>{{ dataa.username }}</td>
-        </tr>
+
         <tr>
             <th class="head">Email :</th>
             <td>{{ dataa.email }}</td>
@@ -56,33 +61,29 @@
             <td>{{ dataa.nationalid }}</td>
         </tr>
 
-              <tr>
-            <th class="head">BirthDate :</th>
-            <td>{{ dataa.birthdate }}</td>
-        </tr>
-
-
-
-                         <tr>
+        <tr>
             <th class="head">Sex :</th>
             <td>{{ dataa.sex }}</td>
         </tr>
 
-                            <tr>
+         <tr>
+            <th class="head">Address :</th>
+            <td>{{ dataa.address }}</td>
+        </tr>
+
+        <tr>
             <th class="head">Mobile Number :</th>
             <td>{{ dataa.mobile }}</td>
         </tr>
 
-
-                                    <tr>
-            <th class="head">Tag ID :</th>
-            <td>{{ dataa.tagid }}</td>
+        <tr>
+            <th class="head" bgcolor="#f0ffff">Tag ID :</th>
+            <td bgcolor="#f0ffff">{{ dataa.tagid }}</td>
         </tr>
 
-
-                                         <tr>
-            <th class="head">Pin ID:</th>
-            <td>{{ dataa.pinid }}</td>
+        <tr>
+            <th class="head" bgcolor="#fafad2">Pin ID:</th>
+            <td bgcolor="#fafad2">{{ dataa.pinid }}</td>
         </tr>
 
     </table>
@@ -90,9 +91,18 @@
       <div class="submit">
           <button type="submit" class="btn btn-success">Agree</button>
 
-            <button type="submit" class="btn btn-warning" onclick="window.location.href='/theform'">Correct
-                Information</button>
+
+
+
         </div>
+</form>
+
+
+            <button type="submit" class="btn btn-warning" onclick="window.location.href='/theform'">
+                Correct
+                Information</button>
+
+
 
 </div>
 
