--- a/templates/form.html
+++ b/templates/form.html
@@ -79,6 +79,13 @@
     </div>
 
 
+      <div class="form-group">
+    <label for="address">Address</label>
+    <input type="tel" class="form-control" id="address" name="address" placeholder="please enter your address">
+  </div>
+
+
+
   <div class="form-group">
     <label for="mobile">mobile number</label>
     <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="please enter your mobile" pattern="^09[0-9]{9}"
