updated register user page !

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -72,6 +72,11 @@
         </tr>
 
         <tr>
+            <th class="head">City :</th>
+            <td>{{ dataa.city }}</td>
+        </tr>
+
+        <tr>
             <th class="head">Mobile Number :</th>
             <td>{{ dataa.mobile }}</td>
         </tr>
